--- a/Changes
+++ b/Changes
@@ -1,4 +1,9 @@
-Change log for UNIVERSAL::exports and UNIVERSAL::require
+0.04
+    - Removed UNIVERSAL::require from distribution.  It is now in its own
+      distribution.
+    - Added copyright and license info
+    - Added link to rt.cpan.org for tracking.
+    - Added extended SEE ALSO to other Exporter-like things.
 
 0.03 Sun Dec 16 21:51:58 EST 2001
     - Moved UNIVERSAL::exports import functionality to Exporter::Lite
